--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <header>
         <div class="container header-content">
             <div class="logo">
-                <img src="dogy.png" alt="Dogy Logo" class="logo-icon" />
+                <img src="dogy-icon.png" alt="Dogy Logo" class="logo-icon" />
                 <div class="logo-text">Dogy</div>
             </div>
             <nav>
