--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dogy - プログラミングに苦労は必要ない。</title>
+    <link rel="icon" href="favicon.ico">
     <style>
         :root {
             --primary-color: #4a6cfa;
