--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 <ul>
                     <li><a href="#features">特徴</a></li>
                     <li><a href="#examples">コード例</a></li>
-                    <li><a href="#docs">ドキュメント</a></li>
+                    <li><a href="/doc.html">ドキュメント</a></li>
                 </ul>
             </nav>
             <button class="download-btn">今すぐダウンロード</button>
